# cloudcatalog

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: bug_report.md
docs/: CONTRIBUTING.md  CloudCatalog-Demo.ipynb  CloudCatalog_Demo.ipynb  Notes.md  cloudcatalog-spec-04.md  cloudcatalog-spec-1.0.md  cloudcatalog-spec-1.1.md  cloudcatalog-spec.md  cloudcatalog_demo.py  conf.py  demo.py  index.rst
docs/earlier/: cloudcatalog-spec-05.md  cloudcatalog-spec-06.md
src/: catalog_updater.py  cloudcatalog.py  cloudcatalog_ui.py
src/test/: cat.csv  catalog_stub.json
src/utils/: cloudcatalog_ui.py  recatalog.py  validator.py
tests/: Validation Demo.ipynb  test_catalog_registry.py  test_entire_catalog_search.py  test_file_registry.py  test_hdrl.py  test_mms.py  validation.py
